[workspace]
resolver = "2"
members = [
    "fvm",
    "sdk",
    "shared",
    "testing/conformance",
]

[workspace.package]
version = "3.13.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"
authors = ["Protocol Labs", "Filecoin Core Devs"]

[workspace.dependencies]
cid = { version = "0.11.1", default-features = false }
multihash = { version = "0.19.3", default-features = false }
multihash-codetable = { version = "0.1.4", default-features = false }
multihash-derive = { version = "0.9.1", default-features = false }
ipld-core = { version = "0.4.2", features = ["serde"] }
wasmtime = {version = "31.0.0", default-features = false, features = ["cranelift", "pooling-allocator", "parallel-compilation", "runtime"] }
wasmtime-environ = "31.0.0"

fvm = { path = "fvm", version = "~3.13.0", default-features = false }
fvm_shared = { path = "shared", version = "~3.13.0", default-features = false }
fvm_sdk = { path = "sdk", version = "~3.13.0" }

fvm_ipld_hamt = { version = "0.10.4"}
fvm_ipld_amt = { version = "0.7.4"}
fvm_ipld_car = { version = "0.8.2" }
fvm_ipld_blockstore = { version = "0.3.1" }
fvm_ipld_encoding = { version = "0.5.3" }

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true

[profile.wasm]
inherits = "release"
panic = "abort"
overflow-checks = false
lto = true
opt-level = "z"
strip = true
codegen-units = 1
incremental = false
