[workspace]
resolver = "3"
members = [
    "fvm",
    "sdk",
    "shared",
    "testing/conformance",
]

[workspace.package]
version = "2.11.3"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/filecoin-project/ref-fvm"
authors = ["Protocol Labs", "Filecoin Core Devs"]

[workspace.dependencies]
cid = { version = "0.11.1", default-features = false }
multihash = { version = "0.19.3", default-features = false }
multihash-codetable = { version = "0.1.4", default-features = false }
multihash-derive = { version = "0.9.1", default-features = false }
fvm_ipld_hamt = { version = "0.10.4"}
fvm_ipld_amt = { version = "0.7.4"}
fvm_ipld_car = { version = "0.9.0" }
fvm_ipld_blockstore = { version = "0.3.1" }
fvm_ipld_encoding = { version = "0.5.3" }
wasmtime = {version = "36", default-features = false, features = ["cranelift", "pooling-allocator", "parallel-compilation", "runtime"] }

fvm = { path = "fvm", version = "~2.11.3", default-features = false }
fvm_shared = { path = "shared", version = "~2.11.3", default-features = false }
fvm_sdk = { path = "sdk", version = "~2.11.3" }

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true
