[package]
name = "forest_actor"
description = "System actors for the Filecoin protocol"
version = "4.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

[dependencies]
num-traits = "0.2"
num-derive = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
ipld_blockstore = "0.1"
ipld_hamt = { path = "../ipld/hamt" }
ipld_amt = { path = "../ipld/amt", features = ["go-interop"]}
forest_ipld = "0.1.1"
## TODO proofs feature enabled by default
fvm_shared = { path = "../shared" }
unsigned-varint = "0.6"
integer-encoding = { version = "3.0", default-features = false }
bitfield = { package = "forest_bitfield", version = "0.1" }
byteorder = "1.3.4"
ahash = "0.6"
## cid = "0.7.0"
## Need to migrate to non-Forest CID type?
cid = { package = "forest_cid", path = "../ipld/cid", version = "0.3" }
base64 = "0.13"
log = "0.4.8"
indexmap = { version = "1.7.0", features = ["serde-1"] }
## TODO shouldn't be depending on proofs API from WASM actor code; usages of this module should probably be behind syscalls
filecoin-proofs-api = { version = "9", features = ["blst"], default_features = false }

[dev-dependencies]
derive_builder = "0.9"
db = { package = "forest_db", version = "0.1" }
hex = "0.4.2"

[features]
devnet = []
interopnet = []
