[package]
name = "forest_actor"
description = "System actors for the Filecoin protocol"
version = "4.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

[dependencies]
num-traits = "0.2"
num-derive = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
ipld_blockstore = "0.1"
ipld_hamt = { path = "../ipld/hamt" }
ipld_amt = { path = "../ipld/amt", features = ["go-interop"]}
forest_ipld = "0.1.1"
## TODO proofs feature enabled by default
fvm_shared = { path = "../shared", features = ["crypto"] }
unsigned-varint = "0.7"
integer-encoding = { version = "3.0", default-features = false }
bitfield = { package = "forest_bitfield", version = "0.1" }
byteorder = "1.3.4"
ahash = "0.7"
cid = { version = "0.7", features = ["serde-codec"] }
multihash = { version = "0.15", features = ["identity"] }
base64 = "0.13"
fvm_sdk = { path = "../sdk", optional = true }
log = "0.4.8"
indexmap = { version = "1.7.0", features = ["serde-1"] }
filecoin-proofs-api = { version = "10.1", features = ["opencl"], default_features = false }

[dev-dependencies]
derive_builder = "0.10"
hex = "0.4.2"

[features]
# TODO remove this
default = ["fvm_actor"]
devnet = []
interopnet = []
fvm_actor = ["fvm_sdk"]
