# The Cargo manifest for the Filecoin Virtual Machine Actor Development SDK.

[package]
name = "fvm_sdk"
description = "Filecoin Virtual Machine actor development SDK"
# Use workspace inherited metadata for version, license, edition, and repository for consistency.
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Protocol Labs", "Filecoin Core Devs"]

[lib]
# This SDK is a library crate, typically compiled into a Wasm module for FVM.
crate-type = ["lib"]

[dependencies]
# Dependencies inherited from the workspace manifest for version control.
cid = { workspace = true }
# num-traits: Disabled default features to ensure compatibility with `no_std` environments 
# like the FVM, optimizing for minimal size.
num-traits = { workspace = true, default-features = false }
lazy_static = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[features]
# The default set of features when compiling this crate.
default = ["verify-signature"]
m2-native = []
upgrade-actor = []

# This feature keeps the deprecated `verify_signature` syscall.
# It is enabled by default for backward compatibility purposes until FIP-0079 is fully enforced.
# See tracking issue: <https://github.com/filecoin-project/ref-fvm/issues/2001>
verify-signature = []
