[package]
name = "fvm_sdk"
description = "Filecoin Virtual Machine actor development SDK"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Protocol Labs", "Filecoin Core Devs"]

[lib]
crate-type = ["lib"]

# MARK: - Dependencies (Alphabetically Sorted)
[dependencies]
# Core Content ID (CID) dependency.
cid = { workspace = true } 
# FVM IPLD encoding and serialization utilities.
fvm_ipld_encoding = { workspace = true }
# Core FVM shared types and constants.
fvm_shared = { workspace = true }
# General-purpose compile-time initialization (e.g., for global statics).
lazy_static = { workspace = true }
# Logging utility.
log = { workspace = true }
# Necessary for `no_std` compatibility in the FVM environment.
num-traits = { workspace = true, default-features = false }
# Error handling utilities.
thiserror = { workspace = true }

# MARK: - Features
[features]
# The default feature set enabled when no explicit features are specified.
default = ["verify-signature"] 

# Allows actors to run natively on the M2 runtime (if supported by implementation).
m2-native = []

# Enables functionality related to actor code upgrades.
upgrade-actor = []

# Allows access to the `verify_signature` syscall.
# This feature is kept for backward compatibility and is expected to be removed per FIP-0079.
# See: <https://github.com/filecoin-project/ref-fvm/issues/2001>
verify-signature = []
