[package]
name = "fvm_actor_market"
description = "Builtin market actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/fvm"

[dependencies]
actors-runtime = { path = "../runtime" }
fvm_shared = { path = "../../shared", default-features = false }
num-traits = "0.2"
num-derive = "0.3.0"
bitfield = { package = "forest_bitfield", path = "../../ipld/bitfield" }
ahash = "0.7"
serde = { version = "1.0", features = ["derive"] }
cid = { version = "0.8.2", default-features = false, features = ["serde-codec"] }
log = "0.4.8"
anyhow = "1.0.51"

[dev-dependencies]
actors-runtime = { path = "../runtime", features = ["test_utils"] }
ipld_amt = { path = "../../ipld/amt", features = ["go-interop"]}

[features]
default = []

# This feature is set when building wasm
runtime-wasm = ["actors-runtime/runtime-wasm"]


[build-dependencies]
wasm-builder = { package = "substrate-wasm-builder", git = "https://github.com/paritytech/substrate" }


