[package]
name = "fvm_actor_miner"
description = "Builtin miner actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/fvm"

[dependencies]
fvm_shared = { path = "../../shared", default-features = false }
serde = { version = "1.0", features = ["derive"] }
blockstore = { version = "0.1.0", path = "../../lib/blockstore" }
cid = { version = "0.7", features = ["serde-codec"] }
num-traits = "0.2"
num-derive = "0.3.0"

# fvm_actor_account = { path = "../account" }
# fvm_actor_market = { path = "../market" }
# fvm_actor_power = { path = "../power" }
# fvm_actor_reward = { path = "../reward" }

[features]
default = []

# This feature is set when building wasm
runtime-wasm = []


[build-dependencies]
wasm-builder = "3.0.1"


