[package]
name = "fvm_actor_paych"
description = "Builtin paych actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/fvm"

[dependencies]
actors-runtime = { path = "../runtime" }
fvm_shared = { path = "../../shared", default-features = false }
num-traits = "0.2"
num-derive = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
cid = { version = "0.7", default-features = false, features = ["serde-codec"] }
anyhow = "1.0.51"

[dev-dependencies]
actors-runtime = { path = "../runtime", features = ["test_utils"] }
ipld_amt = { path = "../../ipld/amt", features = ["go-interop"]}
derive_builder = "0.10"

[features]
default = []

# This feature is set when building wasm
runtime-wasm = ["actors-runtime/runtime-wasm"]


[build-dependencies]
wasm-builder = "3.0.1"


