[package]
name = "fvm_actor_power"
description = "Builtin power actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/fvm"

[dependencies]
fvm_shared = { path = "../../shared", default-features = false }
num-traits = "0.2"
num-derive = "0.3.0"

[features]
default = []

# This feature is set when building wasm
runtime-wasm = []


[build-dependencies]
wasm-builder = "3.0.1"


