[package]
name = "fvm_actor_power"
description = "Builtin power actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/fvm"

[dependencies]
actors-runtime = { path = "../runtime" }
fvm_shared = { path = "../../shared", default-features = false }
num-traits = "0.2"
num-derive = "0.3.0"
log = "0.4.8"
indexmap = { version = "1.7.0", features = ["serde-1"] }
cid = { version = "0.8.2", default-features = false, features = ["serde-codec"] }
integer-encoding = { version = "3.0", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
ipld_hamt = { path = "../../ipld/hamt" }
anyhow = "1.0.51"

[features]
default = []

# This feature is set when building wasm
runtime-wasm = ["actors-runtime/runtime-wasm"]


[build-dependencies]
wasm-builder = { package = "substrate-wasm-builder", git = "https://github.com/paritytech/substrate" }


