[package]
name = "actors-runtime"
description = "System actors for the Filecoin protocol"
version = "4.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

[dependencies]
num-traits = "0.2"
num-derive = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
ipld_hamt = { path = "../../ipld/hamt" }
ipld_amt = { path = "../../ipld/amt", features = ["go-interop"]}
fvm_shared = { path = "../../shared", default-features = false }
unsigned-varint = "0.7.1"
integer-encoding = { version = "3.0", default-features = false }
byteorder = "1.3.4"
cid = { version = "0.7", default-features = false, features = ["serde-codec"] }
multihash = { version = "0.15", default-features = false, features = ["identity"] }
base64 = "0.13"
fvm_sdk = { path = "../../sdk", optional = true }
log = "0.4.8"
indexmap = { version = "1.7.0", features = ["serde-1"] }
thiserror = "1.0.30"

# enforce wasm comapt
getrandom = { version = "0.2", features = ["js"] }

hex = { version = "0.4.2", optional = true }
anyhow = "1.0.51"

[dev-dependencies]
derive_builder = "0.10"
hex = "0.4.2"

[features]
default = []
devnet = []
interopnet = []
test_utils = ["hex"]

# This feature is set when building wasm
runtime-wasm = ["fvm_sdk"]

[build-dependencies]
wasm-builder = "3.0.1"
