[package]
name = "fvm_actor_system"
description = "Builtin system actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/fvm"

[dependencies]
actors-runtime = { path = "../runtime" }
fvm_shared = { path = "../../shared", default-features = false }
num-traits = "0.2"
num-derive = "0.3.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []

# This feature is set when building wasm
runtime-wasm = ["actors-runtime/runtime-wasm"]


[build-dependencies]
wasm-builder = { package = "substrate-wasm-builder", git = "https://github.com/paritytech/substrate" }


