[package]
name = "fvm_actor_verifreg"
description = "Builtin verifreg actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/filecoin-project/fvm"

[dependencies]
actors-runtime = { path = "../runtime" }
fvm_shared = { path = "../../shared", default-features = false }
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.3.0"
cid = { version = "0.7", default-features = false, features = ["serde-codec"] }
lazy_static = "1.4"
anyhow = "1.0.51"

[features]
default = []

# This feature is set when building wasm
runtime-wasm = ["actors-runtime/runtime-wasm"]


[build-dependencies]
wasm-builder = "3.0.1"


