[package]
name = "fvm_example_actor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cid = { version = "0.7.0", default-features = false }
fvm_sdk = { path = "../../sdk" }
