[package]
name = "fvm_token_actor"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cid = { version = "0.7.0", default-features = false }
fvm_sdk = { path = "../../sdk" }
fvm_shared = { path = "../../shared" }
ipld_hamt = { path = "../../ipld/hamt" }
serde = { version = "1.0", features = ["derive"] }