[package]
name = "fvm_ipld_amt"
description = "Sharded IPLD Array implementation."
version = "0.6.2"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
cid = { workspace = true, features = ["serde-codec"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
once_cell = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[[bench]]
name = "amt_benchmark"
path = "benches/amt_benchmark.rs"
harness = false
