[package]
name = "fvm_ipld_amt"
description = "Sharded IPLD Array implementation."
version = "0.7.5"
license.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
repository.workspace = true

[dependencies]
cid = { workspace = true, features = ["serde"] }
multihash-codetable = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
once_cell = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[[bench]]
name = "amt_benchmark"
path = "benches/amt_benchmark.rs"
harness = false
