[package]
name = "fvm_ipld_bitfield"
description = "Bitfield logic for use in Filecoin actors"
version = "0.5.1"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/ref-fvm"

[dependencies]
unsigned-varint = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
thiserror = "1.0.30"
arbitrary = { version = "1.1.0", optional = true}
fvm_ipld_encoding = { version = "0.2", path = "../encoding" }

[dev-dependencies]
rand_xorshift = "0.2.0"
rand = "0.7.3"
criterion = "0.3"
serde_json = "1.0"
gperftools = "0.2.0"

[features]
json = []
enable-arbitrary = ["arbitrary"]

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
